--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
-
 {
   "name": "bot-mini",
   "version": "1.0.0",
+  "description": "A mini WhatsApp bot with integrated pairing page and always-online features.",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "latest",
-    "body-parser": "^1.20.2",
-    "express": "^4.18.2",
-    "fs-extra": "^11.1.1",
-    "qrcode": "^1.5.1"
-  }
+    "@whiskeysockets/baileys": "^6.6.0",
+    "express": "^4.19.2",
+    "pino": "^8.15.0",
+    "qrcode-terminal": "^0.12.0"
+  },
+  "engines": {
+    "node": ">=18"
+  },
+  "author": "Nector",
+  "license": "MIT"
 }
