--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^1.6.7",
     "express": "^4.19.2",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "pino": "^9.4.0",
+    "pino-pretty": "^11.2.2"
   },
   "engines": {
     "node": ">=18.x"
